@@ -5,6 +5,7 @@ GO INTO TRUNK. IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS
 WELL AS TRUNK.  EVERYTHING ELSE GOES INTO TRUNK
 
 2006/10/09
+	* Merged trade distance being 2 rather than 5. [Skotlex]
 	* Merged mobs unlocking their target when inflicted by status changes or
 	  when polymorphing. [Skotlex]
 2006/10/08
